--- a/Projet_2.0/Projet_2.0/Projet_2.0.csproj
+++ b/Projet_2.0/Projet_2.0/Projet_2.0.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="Animated.cs" />
     <Compile Include="Animation.cs" />
     <Compile Include="Casper.cs" />
@@ -125,9 +126,11 @@
     <Compile Include="Menus\Menu_Play_Solo.cs" />
     <Compile Include="Menus\Menu_Play_Solo_World1.cs" />
     <Compile Include="Menus\Menu_Play_Solo_World2.cs" />
+    <Compile Include="Moteur Particule\Particule.cs" />
     <Compile Include="Movable.cs" />
     <Compile Include="Object.cs" />
     <Compile Include="Obstacles.cs" />
+    <Compile Include="Moteur Particule\ParticuleEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
