--- a/Projet_2.0/Projet_2.0/Projet_2.0.csproj
+++ b/Projet_2.0/Projet_2.0/Projet_2.0.csproj
@@ -107,7 +107,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AI.cs" />
+    <Compile Include="AI_basic.cs" />
+    <Compile Include="AI_moderate.cs" />
     <Compile Include="Animated.cs" />
     <Compile Include="Animation.cs" />
     <Compile Include="Casper.cs" />
@@ -134,6 +135,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Resolution.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="Triangle.cs" />
