--- a/Projet_2.0/Projet_2.0/Projet_2.0.csproj
+++ b/Projet_2.0/Projet_2.0/Projet_2.0.csproj
@@ -131,6 +131,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Game1.cs" />
+    <Compile Include="Resolution.cs" />
     <Compile Include="ScreenManager.cs" />
     <Compile Include="SoundManager.cs" />
     <Compile Include="Triangle.cs" />
