ajout classes level

--- a/Projet_2.0/Projet_2.0/Projet_2.0.csproj
+++ b/Projet_2.0/Projet_2.0/Projet_2.0.csproj
@@ -118,6 +118,12 @@
     <Compile Include="Decors.cs" />
     <Compile Include="Level1.cs" />
     <Compile Include="Camera.cs" />
+    <Compile Include="Levels\W1L1.cs" />
+    <Compile Include="Levels\W1L2.cs" />
+    <Compile Include="Levels\W1L3.cs" />
+    <Compile Include="Levels\W2L1.cs" />
+    <Compile Include="Levels\W2L2.cs" />
+    <Compile Include="Levels\W2L3.cs" />
     <Compile Include="Menus\Menu_Base.cs" />
     <Compile Include="Menus\Menu_Options.cs" />
     <Compile Include="Menus\Menu_Pause.cs" />
